# trauso

./: AGENTS.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/aria2/: api.rs
src-tauri/src/settings/: api.rs  mod.rs  types.rs
src/components/: dashboard-layout.tsx
src/hooks/: use-download-queue.ts
src/lib/: api.ts  settings.ts  types.ts
