[package]
name = "trauso"
version = "0.1.0"
description = "TeraBox Downloader - Fast and easy file downloader"
authors = ["basstimam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trauso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for TeraBox API
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Regex for URL parsing
regex = "1"

# Base64 encoding/decoding
base64 = "0.22"

# URL encoding/decoding  
urlencoding = "2"

# Random number generation
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# UUID for RPC request IDs
uuid = { version = "1", features = ["v4"] }


